--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .sidebar-icon {
+    @apply relative flex items-center justify-center
+            h-12 w-12;
+  }
+}
